BAEL-3414 -> Add unit tests